[workspace]

members = [ "thrussh-keys", "thrussh", "thrussh-libsodium", "thrussh-agent" ]

[replace]

"thrussh-keys:0.9.5" = { path = "thrussh-keys" }
"thrussh-libsodium:0.1.3" = { path = "thrussh-libsodium" }
"net2:0.2.32" = { git = "https://gitlab.redox-os.org/redox-os/net2-rs" }
"mio:0.6.14" = { git = "https://gitlab.redox-os.org/redox-os/mio" }

#[patch.crates-io]
#thrussh-keys = { path = "thrussh-keys" }
#thrussh-libsodium = { path = "thrussh-libsodium" }
#net2 = { git = "https://gitlab.redox-os.org/redox-os/net2-rs" }
#mio = { git = "https://gitlab.redox-os.org/redox-os/mio" }
